fixed Lint complaints